[package]
name = "parquet_write"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
parquet = "48.0.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
